<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="the">THE</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="awesome">Awesome</string>
    <string name="branded">Branded</string>
    <string name="shoes">Shoes</string>
    <string name="get_start">get Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_bkgrund">app_bkgrund</string>
    <string name="show_list">goto List</string>
    <string name="welcome_to">Welcome to</string>
    <string name="description">Welcome to shoe store App\nhere you can choose from many styles and brands of shoes\nyou will find three departments for men,women and kids</string>
    <string name="goto_list">Please Click Button to open shoe list page</string>
    <string name="desc">Description</string>
    <string name="add">Add</string>
    <string name="log_out">Log out</string>
    <string name="shoe_name">Enter Shoe Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="description_lable">Description</string>
    <string name="size">Size</string>
    <string name="enter_size">Enter Size</string>
    <string name="company_lable">Company</string>
    <string name="enter_company">Enter Company</string>
    <string name="shoe_namelable">Shoe Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>