<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <!--    here i use constraintlayout besause it's flexibility and i can manage view easily-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Login" android:id="@+id/login_layout" android:background="@drawable/welcom_background">

        <!-- TODO: Update blank fragment layout -->
        <EditText
                android:id="@+id/txt_email"
                android:hint="@string/enter_your_email"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:inputType="textEmailAddress"
                style="@style/login_style" app:layout_constraintHorizontal_bias="1.0"/>
        <EditText
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/txt_password" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email" style="@style/login_style"
                app:layout_constraintVertical_bias="0.100000024"/>
        <Button

                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_login"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_password"
                app:layout_constraintVertical_bias="0.17000002"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>